Some small changes

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
       <section id="main_content" class="inner">
         <h1>
 <a id="shihougithubio" class="anchor" href="#shihougithubio" aria-hidden="true"><span class="octicon octicon-link"></span></a>shihou.github.io</h1>
-
 <p>ShiHou's Blog</p>
+<p>I wanna learn more about html and css.</p>
       </section>
     </div>
 
